# src/score-service/api_spec.yaml
@@ -23,6 +23,13 @@ paths:
         required: false
         schema:
           type: integer
+      - name: level
+        in: query
+        required: false
+        schema:
+          type: integer
+          minimum: 0
+          maximum: 2
       responses:
         '200':
           description: Ok
